@@ -1,0 +1,46 @@
+﻿//
+//  Author:
+//    Wojciech Kotlarski
+//
+//  Copyright (c) 2013, Wojciech Kotlarski
+//
+//  All rights reserved.
+//
+//  Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
+//
+//     * Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.	 
+//     * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in
+//       the documentation and/or other materials provided with the distribution.
+//
+//  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 
+//  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT 
+//  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS 
+//  FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR 
+//  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, 
+//  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, 
+//  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR 
+//  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF 
+//  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING 
+//  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS 
+//  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+//
+
+namespace Spring.FluentContext.Definitions
+{
+	/// <summary>
+	/// Class allowing to create definitions referencing to existing objects in context.
+	/// </summary>
+	public static class Value
+	{
+		/// <summary>
+		/// Creates definition of constant <c>value</c> of <c>TTargetType</c> type.
+		/// </summary>
+		/// <typeparam name="TTargetType">Type of constant value.</typeparam>
+		/// <param name="value">Value.</param>
+		/// <returns>Definition.</returns>
+		public static IDefinition<TTargetType> Const<TTargetType>(TTargetType value)
+		{
+			return new Definition<TTargetType>(value);
+		}
+	}
+}
